[gd_scene load_steps=9 format=3 uid="uid://qq6c6dil3jcl"]

[ext_resource type="Script" uid="uid://ct12jv14my50w" path="res://scenes/gameplay/widgets/viz2d/card_viz_2d.gd" id="1_fjvxj"]
[ext_resource type="Resource" uid="uid://dgp6abcejnxu8" path="res://resources/data/card/player_card.tres" id="2_pyu2m"]
[ext_resource type="Texture2D" uid="uid://pgo1v2tn7yih" path="res://icon.svg" id="3_ofb3v"]
[ext_resource type="Texture2D" uid="uid://ck8b5vmcv5ai2" path="res://resources/sprite/card_border.svg" id="3_qql8r"]
[ext_resource type="Shader" uid="uid://dxubqahmkwplj" path="res://resources/shaders/ui/card_outline.gdshader" id="3_v2w0c"]
[ext_resource type="Script" uid="uid://bsvj5t813vm0l" path="res://scripts/gameplay/fragments/frag_tree.gd" id="3_xtigd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fjvxj"]
shader = ExtResource("3_v2w0c")
shader_parameter/outline_color = Color(1, 0.8, 0.2, 1)
shader_parameter/outline_strength = 0.0
shader_parameter/thickness = 2.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjvxj"]
size = Vector2(200, 300)

[node name="CardViz2D" type="Node2D"]
script = ExtResource("1_fjvxj")
card_data = ExtResource("2_pyu2m")

[node name="Root" type="Node" parent="."]
script = ExtResource("3_xtigd")
local_card = NodePath("..")

[node name="Stack" type="Node" parent="."]

[node name="Background" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_fjvxj")
texture = ExtResource("3_qql8r")

[node name="Front" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Front"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Image" type="TextureRect" parent="Front/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_ofb3v")
expand_mode = 1

[node name="Title" type="Label" parent="Front/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "2222222"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
clip_text = true

[node name="Back" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_fjvxj")
debug_color = Color(0.8999739, 0.0001732707, 0.7657645, 0.41960785)

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
